--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "dependencies": {
     "@types/jest": "24.0.19",
     "@types/node": "12.7.12",
-    "@types/react": "16.9.6",
-    "@types/react-dom": "16.9.2",
+    "@types/react": "^16.9.6",
+    "@types/react-dom": "^16.9.2",
+    "@types/reactstrap": "^8.0.5",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "typescript": "3.6.4"
+    "reactstrap": "^8.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "tslint": "^5.20.0",
+    "tslint-config-airbnb": "^5.11.2",
+    "typescript": "^3.6.4",
+    "typings": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
