--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/reactstrap": "^8.0.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "lodash.sortby": "^4.7.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
