--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-scripts-scss-ts": "^2.17.1",
+    "react-scripts-ts": "^3.1.0",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^8.0.0",
+
+    "ts-loader": "^6.2.0",
     "tslint": "^5.20.0",
     "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.6.4",
