--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.0",
-
     "ts-loader": "^6.2.0",
     "tslint": "^5.20.0",
     "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.6.4",
-    "typings": "^2.1.1"
+    "typings": "^2.1.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/yup": "^0.26.24"
   }
 }
